# FlyDSL

./: .gitignore  CLAUDE.md
.github/workflows/: flydsl-vllm-integration.yaml  flydsl.yaml
docs/: architecture_guide.md  conf.py  kernel_authoring_guide.md  prebuilt_kernels_guide.md
kernels/: blockscale_preshuffle_gemm.py  bmm_a16w8_gfx1250.py  bmm_w8a8_gfx1250.py  flash_attn_fp8_gfx950.py  flash_attn_generic.py  flash_attn_gfx950.py  flash_attn_interface.py  fp4_gemm_4wave.py  fp8_gemm_4wave.py  fused_rope_cache_kernel.py  gemm_common_gfx1250.py  gemm_fp8fp4_gfx1250.py  kernels_common.py  layernorm_kernel.py  layout_utils.py  mfma_preshuffle_pipeline.py  mixed_moe_gemm_2stage.py  moe_blockscale_2stage.py  moe_gemm_2stage.py  moe_gemm_2stage_common_gfx1250.py  moe_gemm_2stage_mxscale_gfx1250.py  moe_gemm_2stage_wmma_gfx1250.py  pa_decode_fp8.py  preshuffle_gemm.py  preshuffle_gemm_v2.py  qk_norm_rope_quant.py  wmma_gemm_gfx1250.py
lib/Runtime/ROCm/: CMakeLists.txt  FlyRocmRuntimeWrappers.cpp
python/flydsl/: __init__.py
scripts/: run_benchmark.sh
tests/: test_common.py
tests/kernels/: benchmark_common.py  probe_wide_layout.py  test_bmm_a16w8_gfx1250.py  test_bmm_w8a8_gfx1250.py  test_flash_attn_fwd.py  test_fp4_gemm_4wave.py  test_fp8_gemm_rowscale.py  test_gemm_fp8fp4_gfx1250.py  test_layernorm.py  test_mla_decode.py  test_preshuffle_gemm.py  test_rmsnorm.py  test_vec_add.py
tests/perf/: bench_tdm_bandwidth_gfx1250.py
tests/system/: test_closure_freevars_mismatch.py  test_control_flow_compile.py  test_for_auto_iter_args_e2e.py  test_if_liveout_minimal.py  (+3 more)
(+64 files in other folders)
